--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django = "<1.12"
 
 [dev-packages]
+selenium = "<4"
 
 [requires]
 python_version = "3.6"
