--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 django = "<1.12"
+selenium = "<4"
 gunicorn
+fabric3
 
 [dev-packages]
-selenium = "<4"
 
 [requires]
 python_version = "3.6"
